[tool.poetry]
name = "polar-flow-export"
version = "1.0.0"
description = "Command line tool for bulk exporting from Polar Flow"
authors = ["pvbouwel <petervanbouwel@gmail.com>", "gabrielreid"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "polar_flow_export"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dateutil = "^2.8.2"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
polar-flow-export = "polar_flow_export.cli:app"